{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 10,
  "lineage": "8ed4ddec-a017-359a-6735-1299173eecba",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cp1_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-06T10:28:42.140-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-329700/global/firewalls/chapter1-firewall",
            "log_config": [],
            "name": "chapter1-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/global/networks/terraform-gcp-329700-vpc",
            "priority": 1000,
            "project": "terraform-gcp-329700",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/global/firewalls/chapter1-firewall",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cp2_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-06T10:28:42.475-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-329700/global/firewalls/chapter2-firewall",
            "log_config": [],
            "name": "chapter2-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/global/networks/terraform-gcp-329700-vpc",
            "priority": 1000,
            "project": "terraform-gcp-329700",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/global/firewalls/chapter2-firewall",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "chapter1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210928",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/zones/us-east4-c/disks/chapter1-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-329700/zones/us-east4-c/instances/chapter1-instance",
            "instance_id": "3303394358568061878",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "D4z_Bqg6Eak=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install apache2 -y; echo Testando instância 1 \u003e /var/www/html/index.html",
            "name": "chapter1-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.85.183.251",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/global/networks/terraform-gcp-329700-vpc",
                "network_ip": "10.8.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/regions/us-east4/subnetworks/terraform-gcp-329700-subnet1",
                "subnetwork_project": "terraform-gcp-329700"
              }
            ],
            "project": "terraform-gcp-329700",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/zones/us-east4-c/instances/chapter1-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east4-c"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "chapter2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210928",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/zones/us-east4-b/disks/chapter2-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-329700/zones/us-east4-b/instances/chapter2-instance",
            "instance_id": "6599525919931140633",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "-nioaQbSKr4=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install apache2 -y; echo Testando instância 2 \u003e /var/www/html/index.html",
            "name": "chapter2-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.150.249.51",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/global/networks/terraform-gcp-329700-vpc",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/regions/us-east4/subnetworks/terraform-gcp-329700-subnet2",
                "subnetwork_project": "terraform-gcp-329700"
              }
            ],
            "project": "terraform-gcp-329700",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/zones/us-east4-b/instances/chapter2-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east4-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/terraform-gcp-329700/global/networks/terraform-gcp-329700-vpc",
            "mtu": 0,
            "name": "terraform-gcp-329700-vpc",
            "project": "terraform-gcp-329700",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/global/networks/terraform-gcp-329700-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-01-06T10:28:42.404-08:00",
            "gateway_address": "10.8.0.1",
            "id": "projects/terraform-gcp-329700/regions/us-east4/subnetworks/terraform-gcp-329700-subnet1",
            "ip_cidr_range": "10.8.0.0/24",
            "name": "terraform-gcp-329700-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/global/networks/terraform-gcp-329700-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-329700",
            "purpose": "PRIVATE",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/regions/us-east4/subnetworks/terraform-gcp-329700-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-01-06T10:28:43.164-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/terraform-gcp-329700/regions/us-east4/subnetworks/terraform-gcp-329700-subnet2",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "terraform-gcp-329700-subnet2",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/global/networks/terraform-gcp-329700-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-329700",
            "purpose": "PRIVATE",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-329700/regions/us-east4/subnetworks/terraform-gcp-329700-subnet2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}